--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ Thumbs.db
 *.mov
 *.wmv
 
+# VS Code and PIO
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
