Intial unit testing setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = teensy
 board = teensy41
 framework = arduino
+test_framework = unity
+test_filter = arduino/*
+
+[env:native]
+platform = native
+test_framework = googletest
+test_filter = native/*
