--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+build_src_filter = -<*>
+build_flags = -Werror
+
 [env:teensy41]
 platform = teensy
 board = teensy41
 framework = arduino
+build_src_filter = +<main.cpp> +<imxrt1062>
 test_framework = unity
 test_filter = arduino/*
 
