sensor library corrections, new time library, peripheral driver fixes
The "time" library contains functions for telling time and producing accurate delays. It must be initialized at the beginning of the program with initTimers().

Adjusted the calculations in the ms5637 library and added a conversion delay using the new time library and based on the conversion speed being used.

I2C and SPI drivers were both corrected to set the IO mux as needed (currently only to certain testing pins). They were also changed to automatically get the source clock from fsl_clock.h functions instead of being predefined.

main.cpp now contains test code for the time library and commented test code for the ms5637 and lsm6dsox

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,11 @@
         "fsl_device_registers.h": "c",
         "fsl_lpi2c.h": "c",
         "mimxrt1062_features.h": "c",
-        "fsl_gpio.h": "c"
+        "fsl_gpio.h": "c",
+        "board.h": "c",
+        "clock_config.h": "c",
+        "fsl_gpt.h": "c",
+        "fsl_clock.h": "c",
+        "fsl_qtmr.h": "c"
     }
 }
