gpio, i2c, and spi fixes
Setting the IOMUXC registers was required to configure the various peripherals to operate properly.

The gpio driver now looks up the appropriate mux register from a new array in board.h and sets the mux mode.

The i2c driver now sets up the proper teensy pins except where there are none (returns PARAMETER_ERROR).

The spi driver now sets up the proper teensy pins, including specified CS, except where there are none (returns PARAMETER_ERROR).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "clock_config.h": "c",
         "fsl_gpt.h": "c",
         "fsl_clock.h": "c",
-        "fsl_qtmr.h": "c"
+        "fsl_qtmr.h": "c",
+        "pin_mux.h": "c"
     }
 }
