Modifications to get all 3 working at once

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ build_flags = -Werror -Isrc/imxrt1062/MIMXRT1062 -Isrc/imxrt1062/CMSIS/Core/Incl
 platform = teensy
 board = teensy41
 framework = arduino
-build_src_filter = +<main.cpp> +<imxrt1062>
+build_src_filter = +<main.cpp> +<imxrt1062> +<teensy_sd.*>
 test_framework = unity
 test_filter = arduino/*
 
