--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ framework = stm32cube
 build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
+build_flags = -Isrc/pal_9k31/USB_Device/Target
 
 [env:native]
 platform = native
