Retain global build flags when adding include paths

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 build_src_filter = -<*>
-build_flags = -Werror -Isrc/imxrt1062/MIMXRT1062 -Isrc/imxrt1062/CMSIS/Core/Include -Isrc/imxrt1062/MIMXRT1062/drivers
+build_flags = -Wall -Werror
 
 [env:teensy41]
 platform = teensy
@@ -19,6 +19,10 @@ framework = arduino
 build_src_filter = +<imxrt1062> +<teensy_41>
 test_framework = unity
 test_filter = arduino/*
+build_flags = ${env.build_flags}
+    -Isrc/imxrt1062/MIMXRT1062
+    -Isrc/imxrt1062/CMSIS/Core/Include
+    -Isrc/imxrt1062/MIMXRT1062/drivers
 
 [env:pal_9k31]
 platform = ststm32
@@ -27,7 +31,8 @@ framework = stm32cube
 build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
-build_flags = -Isrc/pal_9k31/USB_Device/Target
+build_flags = ${env.build_flags}
+    -Isrc/pal_9k31/USB_Device/Target
 
 [env:native]
 platform = native
