Added to max-m10s code and updated main and timers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "time.h": "c",
         "usbd_def.h": "c",
         "ms5637.h": "c",
-        "usb_device.h": "c"
+        "usb_device.h": "c",
+        "stdio.h": "c"
     }
 }
