--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,7 @@ test_framework = unity
 test_filter = stm32cube/*
 build_flags = ${env.build_flags}
     -Isrc/pal_9k31/USB_Device/Target
+    -Isrc/pal_9k31/littlefs
 
 [env:native]
 platform = native
