--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "ms5637.h": "c",
         "usb_device.h": "c",
         "stdio.h": "c",
-        "status.h": "c"
+        "status.h": "c",
+        "lfs.h": "c"
     }
 }
