--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ test_filter = stm32cube/*
 build_flags = ${env.build_flags}
     -Isrc/pal_9k31/USB_Device/Target
     -Isrc/pal_9k31/littlefs
+upload_protocol = dfu
 
 [env:native]
 platform = native
