disable flash filesystem for now (getting hardfault)

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ build_flags = ${env.build_flags}
     -D HSE_VALUE=48000000
     -Wl,--undefined,_printf_float
 upload_protocol = dfu
+debug_tool = stlink
 
 [env:native]
 platform = native
