Fixes to get SD card logging working

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,7 @@ build_flags = ${env.build_flags}
     -Wl,--undefined,_printf_float
 upload_protocol = dfu
 debug_tool = stlink
+debug_build_flags = -g -O0
 
 [env:native]
 platform = native
