Add FreeRTOS files and associated infrastructure

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,8 +32,13 @@ build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
 build_flags = ${env.build_flags}
+    -mcpu=cortex-m4
+    -mfloat-abi=softfp
     -Isrc/pal_9k31/USB_Device/Target
     -Isrc/pal_9k31/littlefs
+    -Isrc/pal_9k31/FreeRTOS/Source/CMSIS_RTOS_V2
+    -Isrc/pal_9k31/FreeRTOS/Source/include
+    -Isrc/pal_9k31/FreeRTOS/Source/portable/GCC/ARM_CM4F
     -D HSE_VALUE=48000000
     -Wl,--undefined,_printf_float
 upload_protocol = dfu
