--- a/platformio.ini
+++ b/platformio.ini
@@ -31,9 +31,11 @@ framework = stm32cube
 build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
+extra_scripts = pre:scripts/add_hardfloat.py
 build_flags = ${env.build_flags}
-    -mcpu=cortex-m4
-    -mfloat-abi=softfp
+    -march=armv7e-m
+    -mfloat-abi=hard
+    -mfpu=fpv4-sp-d16
     -Isrc/pal_9k31/USB_Device/Target
     -Isrc/pal_9k31/littlefs
     -Isrc/pal_9k31/FreeRTOS/Source/CMSIS_RTOS_V2
