--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "stm32g4xx_hal_gpio_ex.h": "c",
         "ff_gen_drv.h": "c",
         "ff.h": "c",
-        "ffconf.h": "c"
+        "ffconf.h": "c",
+        "stateestim.h": "c"
     }
 }
