--- a/platformio.ini
+++ b/platformio.ini
@@ -39,17 +39,18 @@ test_filter = stm32cube/*
 extra_scripts = 
     pre:scripts/add_hardfloat.py
     pre:scripts/auto_firmware_specifier.py
-build_flags = ${env.build_flags}
+build_flags = 
+	${env.build_flags}
     -march=armv7e-m
     -mfloat-abi=hard
     -mfpu=fpv4-sp-d16
-    -Isrc/pal_9k31/USB_Device/Target
-    -Isrc/pal_9k31/littlefs
+	-Isrc/pal_9k31/USB_Device/Target
+	-Isrc/pal_9k31/littlefs
     -Isrc/pal_9k31/FreeRTOS/Source/CMSIS_RTOS_V2
     -Isrc/pal_9k31/FreeRTOS/Source/include
     -Isrc/pal_9k31/FreeRTOS/Source/portable/GCC/ARM_CM4F
-    -D HSE_VALUE=48000000
-    -Wl,--undefined,_printf_float
+	-D HSE_VALUE=48000000
+	-Wl,--undefined,_printf_float
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
