Initialize pal9k41 branch to pal9k31 master

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,10 +23,11 @@ framework = arduino
 build_src_filter = +<imxrt1062> +<teensy_41>
 test_framework = unity
 test_filter = arduino/*
-build_flags = ${env.build_flags}
-    -Isrc/imxrt1062/MIMXRT1062
-    -Isrc/imxrt1062/CMSIS/Core/Include
-    -Isrc/imxrt1062/MIMXRT1062/drivers
+build_flags = 
+	${env.build_flags}
+	-Isrc/imxrt1062/MIMXRT1062
+	-Isrc/imxrt1062/CMSIS/Core/Include
+	-Isrc/imxrt1062/MIMXRT1062/drivers
 
 [env:pal_9k31]
 platform = ststm32
@@ -84,5 +85,3 @@ debug_build_flags = -g -O0
 platform = native
 test_framework = googletest
 test_filter = native/*
-build_flags = 
-    -D FIRMWARE_SPECIFIER=\"test\"
