--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,9 @@ framework = stm32cube
 build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
-extra_scripts = pre:scripts/add_hardfloat.py
+extra_scripts = 
+    pre:scripts/add_hardfloat.py
+    pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
     -march=armv7e-m
     -mfloat-abi=hard
@@ -46,6 +48,9 @@ build_flags = ${env.build_flags}
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
+lib_deps = Nanopb
+custom_nanopb_protos = 
+    +<lib/storage/proto/sensor.proto>
 
 [env:native]
 platform = native
