Add native unit tests and associated changes for testing SD HAL

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,3 +56,8 @@ custom_nanopb_protos =
 platform = native
 test_framework = googletest
 test_filter = native/*
+lib_deps = Nanopb
+build_flags = 
+    -D FIRMWARE_SPECIFIER=\"test\"
+custom_nanopb_protos = 
+    +<lib/storage/proto/sensor.proto>
