--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,10 @@
 [env]
 build_src_filter = -<*>
 build_flags = -Wall -Werror
+lib_deps = Nanopb
+custom_nanopb_protos = 
+    +<lib/storage/proto/sensor.proto>
+    +<lib/storage/proto/gps.proto>
 
 [env:teensy41]
 platform = teensy
@@ -48,16 +52,10 @@ build_flags = ${env.build_flags}
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
-lib_deps = Nanopb
-custom_nanopb_protos = 
-    +<lib/storage/proto/sensor.proto>
 
 [env:native]
 platform = native
 test_framework = googletest
 test_filter = native/*
-lib_deps = Nanopb
 build_flags = 
     -D FIRMWARE_SPECIFIER=\"test\"
-custom_nanopb_protos = 
-    +<lib/storage/proto/sensor.proto>
