Clocks updated and FreeRTOS deleted (pending new one)

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,6 +53,31 @@ upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
 
+[env:pal_9k4]
+platform = ststm32
+board = disco_h735ig
+framework = stm32cube
+build_src_filter = +<stm32h7> +<pal_9k4>
+test_framework = unity
+test_filter = stm32cube/*
+extra_scripts = 
+    pre:scripts/add_hardfloat.py
+    pre:scripts/auto_firmware_specifier.py
+build_flags = ${env.build_flags}
+    -march=armv7e-m
+    -mfloat-abi=hard
+    -mfpu=fpv4-sp-d16
+    -Isrc/pal_9k4/USB_Device/Target
+    -Isrc/pal_9k4/littlefs
+    -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
+    -Isrc/pal_9k4/FreeRTOS/Source/include
+    -Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
+    -D HSE_VALUE=48000000
+    -Wl,--undefined,_printf_float
+upload_protocol = dfu
+debug_tool = stlink
+debug_build_flags = -g -O0
+
 [env:native]
 platform = native
 test_framework = googletest
