--- a/platformio.ini
+++ b/platformio.ini
@@ -72,7 +72,8 @@ build_flags = ${env.build_flags}
     -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
     -Isrc/pal_9k4/FreeRTOS/Source/include
     -Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
-    -D HSE_VALUE=48000000
+    -DHSE_VALUE=48000000
+    -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
 upload_protocol = dfu
 debug_tool = stlink
