Remove lfs, add support for multiple volumes in fatfs

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,7 @@ debug_build_flags = -g -O0
 platform = ststm32
 board = disco_h735ig
 framework = stm32cube
-build_src_filter = +<stm32h7> +<pal_9k4>
+build_src_filter = +<stm32h7> +<pal_9k4> -<pal_9k4/mt29f2g.c>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
