--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,7 @@ debug_build_flags = -g -O0
 platform = ststm32
 board = disco_h735ig
 framework = stm32cube
-build_src_filter = +<stm32h7> +<pal_9k4> -<pal_9k4/mt29f2g.c>
+build_src_filter = +<stm32h7> +<pal_9k4>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
@@ -72,6 +72,7 @@ build_flags = ${env.build_flags}
     -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
     -Isrc/pal_9k4/FreeRTOS/Source/include
     -Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
+    -Isrc/pal_9k4/peripherals
     -DHSE_VALUE=48000000
     -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
