cleaning up flight_est

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
                 "usbd_ioreq.h": "c",
                 "usbd_conf.h": "c",
                 "uart.h": "c",
+                "state_est.h": "c",
                 "max_m10s.h": "c",
                 "sd.h": "c",
                 "sensor.pb.h": "c",
