Add flight state logging

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps = Nanopb
 custom_nanopb_protos = 
     +<lib/storage/proto/sensor.proto>
     +<lib/storage/proto/gps.proto>
+    +<lib/storage/proto/state.proto>
 
 [env:teensy41]
 platform = teensy
