--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
                 "sdmmc.h": "c",
                 "diskio.h": "c",
                 "nand_flash.h": "c",
-                "spi.h": "c"
+                "spi.h": "c",
+                "task.h": "c",
+                "lsm6dsox.h": "c"
         }
 }
