Acceleration State Estimation
It compiles
- updated phase transition conditions
- adjustable up axis
- edited accel_est
- merged state_est with flight_est so we have less files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
                 "usbd_conf.h": "c",
                 "uart.h": "c",
                 "state_est.h": "c",
+                "flight_estimation.h": "c",
                 "max_m10s.h": "c",
                 "sd.h": "c",
                 "sensor.pb.h": "c",
