--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,8 @@
                 "spi.h": "c",
                 "task.h": "c",
                 "lsm6dsox.h": "c",
-                "pressure_altitude.h": "c"
+                "pressure_altitude.h": "c",
+                "data.h": "c",
+                "vector.h": "c"
         }
 }
