Add indications for tickless idle, put core to sleep

--- a/platformio.ini
+++ b/platformio.ini
@@ -70,6 +70,7 @@ build_flags = ${env.build_flags}
     -march=armv7e-m
     -mfloat-abi=hard
     -mfpu=fpv4-sp-d16
+    -Isrc/pal_9k4
     -Isrc/pal_9k4/USB_DEVICE/Target
     -Isrc/pal_9k4/littlefs
     -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
