--- a/platformio.ini
+++ b/platformio.ini
@@ -67,6 +67,7 @@ extra_scripts =
     pre:scripts/add_hardfloat.py
     pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
+    -O2
     -march=armv7e-m
     -mfloat-abi=hard
     -mfpu=fpv4-sp-d16
@@ -82,6 +83,7 @@ build_flags = ${env.build_flags}
     -DHSE_VALUE=48000000
     -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
+build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
