--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ debug_build_flags = -g -O0
 platform = ststm32
 board = disco_h735ig
 framework = stm32cube
-build_src_filter = +<stm32h7> +<pal_9k4>
+build_src_filter = +<stm32h7> +<pal_9k4> -<pal_9k4/hwil>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
@@ -77,8 +77,8 @@ build_flags = ${env.build_flags}
     -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
     -Isrc/pal_9k4/FreeRTOS/Source/include
     -Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
-    -I.pio/build/pal_9k4/nanopb/generated-src
-    -I.pio/libdeps/pal_9k4/Nanopb
+    -I.pio/build/${PIOENV}/nanopb/generated-src
+    -I.pio/libdeps/${PIOENV}/Nanopb
     -Isrc/pal_9k4/peripherals
     -DHSE_VALUE=48000000
     -DUSE_FULL_LL_DRIVER
@@ -87,6 +87,15 @@ build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
+
+[env:pal_9k4_hwil]
+extends = env:pal_9k4
+build_flags = ${env:pal_9k4.build_flags}
+    -DHWIL_TEST
+build_src_filter = ${env:pal_9k4.build_src_filter}
+    +<pal_9k4/hwil>
+extra_scripts = ${env:pal_9k4.extra_scripts}
+    pre:scripts/create_hwil_header.py
 
 [env:native]
 platform = native
