Initial HWIL implementation for Skyshot IRI data

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,7 +95,8 @@ build_flags = ${env:pal_9k4.build_flags}
 build_src_filter = ${env:pal_9k4.build_src_filter}
     +<pal_9k4/hwil>
 extra_scripts = ${env:pal_9k4.extra_scripts}
-    pre:scripts/create_hwil_header.py
+    pre:scripts/generate_hwil_data_file.py
+hwil_data_dir = data/skyshot-iri
 
 [env:native]
 platform = native
