Several miscellaneous fixes and improvements
- Fix the state transition prints
- Don't pause the sensors if the SD card is paused
- Increase telemetry rate in the air
- Add warning buzzer if launch is detected
- Fix init_storage to initialize queues even if the card initialization fails.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
                 "data.h": "c",
                 "vector.h": "c",
                 "timers.h": "c",
-                "pyros.h": "c"
+                "pyros.h": "c",
+                "gps.pb.h": "c"
         }
 }
