--- a/platformio.ini
+++ b/platformio.ini
@@ -96,7 +96,7 @@ build_src_filter = ${env:pal_9k4.build_src_filter}
     +<pal_9k4/hwil>
 extra_scripts = ${env:pal_9k4.extra_scripts}
     pre:scripts/generate_hwil_data_file.py
-hwil_data_dir = data/pal-fsl-test
+hwil_data_dir = data/skyshot-sim
 
 [env:native]
 platform = native
