Working little fs on flash chip
Current just writes the headers for the data files, no actual data logging or way to delete the files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,9 @@
                 "vector.h": "c",
                 "timers.h": "c",
                 "pyros.h": "c",
-                "gps.pb.h": "c"
+                "gps.pb.h": "c",
+                "pb_encode.h": "c",
+                "state.pb.h": "c",
+                "mt29f4g.h": "c"
         }
 }
