Started MTP implementation again
Current problem with MTP trying to do stuff before initialization completes. Need to figure out a better way of doing handles and everything else.

--- a/platformio.ini
+++ b/platformio.ini
@@ -72,7 +72,11 @@ build_flags = ${env.build_flags}
     -mfloat-abi=hard
     -mfpu=fpv4-sp-d16
     -Isrc/pal_9k4
-    -Isrc/pal_9k4/USB_DEVICE/Target
+    -Isrc/pal_9k4/USB_Device/Class/CDC/Inc
+    -Isrc/pal_9k4/USB_Device/Class/MSC/Inc
+    -Isrc/pal_9k4/USB_Device/Class/CompositeBuilder/Inc
+    -Isrc/pal_9k4/USB_Device/Class/MTP/Inc
+    -Isrc/pal_9k4/USB_Device/Core/Inc
     -Isrc/pal_9k4/littlefs
     -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
     -Isrc/pal_9k4/FreeRTOS/Source/include
@@ -83,6 +87,17 @@ build_flags = ${env.build_flags}
     -DHSE_VALUE=48000000
     -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
+lib_ignore = 
+    STM32_USB_Device_Library-CDC
+    STM32_USB_Device_Library-Core
+    STM32_USB_Device_Library-HID
+    STM32_USB_Device_Library-MSC
+    STM32_USB_Device_Library-DFU
+    STM32_USB_Device_Library-VIDEO
+    STM32_USB_Device_Library-AUDIO
+    STM32_USB_Device_Library-CDC_ECM
+    STM32_USB_Device_Library-CDC_RNDIS
+    STM32_USB_Device_Library-CustomHID
 build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
