--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,9 @@
                 "gps.pb.h": "c",
                 "pb_encode.h": "c",
                 "state.pb.h": "c",
-                "mt29f4g.h": "c"
+                "mt29f4g.h": "c",
+                "storage.h": "c",
+                "usbd_mtp_if.h": "c",
+                "lfs_util.h": "c"
         }
 }
