Moved stack and heap to TCM, created initialization task
- Stack and heap memory are now stored in the DTCMRAM region to prevent collision when the program uses a lot of RAM.
- Refactored s_fs and lfs_cfg and g_fs and g_lfs_cfg
- Moved initialization functions to a task to prevent queue creation before the task scheduler has been started.

--- a/platformio.ini
+++ b/platformio.ini
@@ -87,6 +87,7 @@ build_flags = ${env.build_flags}
     -DHSE_VALUE=48000000
     -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
+    -Lsrc/pal_9k4
 lib_ignore = 
     STM32_USB_Device_Library-CDC
     STM32_USB_Device_Library-Core
@@ -98,6 +99,7 @@ lib_ignore =
     STM32_USB_Device_Library-CDC_ECM
     STM32_USB_Device_Library-CDC_RNDIS
     STM32_USB_Device_Library-CustomHID
+board_build.ldscript = linkerscript.ld
 build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
