Working MTP implementation
- Added MTP boot mode entered by using a jumper on startup.
- Factored NAND flash file opening/creation into its own function that limits the number of data files existing at a time.
- Adjusted some interrupt priorities to allow the OSPI interrupt to occur within the USB interrupt.
- Added MTP interface object info array that stores file data, and a function to traverse the filesystem and fill it in.
- Implemented remaining MTP interface functions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,8 @@
                 "mt29f4g.h": "c",
                 "storage.h": "c",
                 "usbd_mtp_if.h": "c",
-                "lfs_util.h": "c"
+                "lfs_util.h": "c",
+                "main.h": "c",
+                "usbd_mtp.h": "c"
         }
 }
