--- a/platformio.ini
+++ b/platformio.ini
@@ -88,6 +88,8 @@ build_flags = ${env.build_flags}
     -DUSE_FULL_LL_DRIVER
     -Wl,--undefined,_printf_float
     -Lsrc/pal_9k4
+    # Platform specific ram sections
+    -DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
 lib_ignore = 
     STM32_USB_Device_Library-CDC
     STM32_USB_Device_Library-Core
