Dhara FTL fully working
- Fixed stack overflow causing a crash on pausing the log.
- PB decode script uses crude method to handle files that end between frames.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 build_src_filter = -<*>
-build_flags = -Wall -Werror
+build_flags = -Wall -Werror -Wno-format-truncation
 lib_deps = Nanopb
 custom_nanopb_protos = 
     +<lib/storage/proto/sensor.proto>
