--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
                 "ospi.h": "c",
                 "usb.h": "c",
                 "state.h": "c",
-                "freertosconfig.h": "c"
+                "freertosconfig.h": "c",
+                "ms5637_model.h": "c"
         }
 }
