testing for pspsp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
                 "vector.h": "c",
                 "timers.h": "c",
                 "pyros.h": "c",
-                "gps.pb.h": "c"
+                "gps.pb.h": "c",
+                "ms5637_model.h": "c"
         }
 }
