--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -7,7 +7,7 @@ build:
 
 python:
   install:
-    - requirements: doc/requirements.txt
+    - requirements: requirements.txt
 
 sphinx:
-  configuration: doc/source/conf.py
+  configuration: source/conf.py
