--- a/platformio.ini
+++ b/platformio.ini
@@ -107,6 +107,56 @@ upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
 
+[env:pal_9k5]
+platform = ststm32
+board = disco_h735ig
+framework = stm32cube
+build_src_filter = +<stm32h7> +<pal_9k5> -<pal_9k5/hwil>
+test_framework = unity
+test_filter = stm32cube/*
+extra_scripts = 
+    pre:scripts/add_hardfloat.py
+    pre:scripts/auto_firmware_specifier.py
+build_flags = ${env.build_flags}
+    -O2
+    -march=armv7e-m
+    -mfloat-abi=hard
+    -mfpu=fpv4-sp-d16
+    -Isrc/pal_9k5
+    -Isrc/pal_9k5/USB_Device/Class/CDC/Inc
+    -Isrc/pal_9k5/USB_Device/Class/MSC/Inc
+    -Isrc/pal_9k5/USB_Device/Class/CompositeBuilder/Inc
+    -Isrc/pal_9k5/USB_Device/Class/MTP/Inc
+    -Isrc/pal_9k5/USB_Device/Core/Inc
+    -Isrc/pal_9k5/FreeRTOS/Source/CMSIS_RTOS_V2
+    -Isrc/pal_9k5/FreeRTOS/Source/include
+    -Isrc/pal_9k5/FreeRTOS/Source/portable/GCC/ARM_CM4F
+    -I.pio/build/${PIOENV}/nanopb/generated-src
+    -I.pio/libdeps/${PIOENV}/Nanopb
+    -Isrc/pal_9k5/peripherals
+    -DHSE_VALUE=48000000
+    -DUSE_FULL_LL_DRIVER
+    -Wl,--undefined,_printf_float
+    -Lsrc/pal_9k5
+    # Platform specific ram sections
+    -DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
+lib_ignore = 
+    STM32_USB_Device_Library-CDC
+    STM32_USB_Device_Library-Core
+    STM32_USB_Device_Library-HID
+    STM32_USB_Device_Library-MSC
+    STM32_USB_Device_Library-DFU
+    STM32_USB_Device_Library-VIDEO
+    STM32_USB_Device_Library-AUDIO
+    STM32_USB_Device_Library-CDC_ECM
+    STM32_USB_Device_Library-CDC_RNDIS
+    STM32_USB_Device_Library-CustomHID
+board_build.ldscript = linkerscript.ld
+build_unflags = -Os
+upload_protocol = dfu
+debug_tool = stlink
+debug_build_flags = -g -O0
+
 [env:pal_9k4_hwil]
 extends = env:pal_9k4
 build_flags = ${env:pal_9k4.build_flags}
