--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,7 @@
                 "stm32h735xx.h": "c",
                 "system_stm32h7xx.h": "c",
                 "button_event.h": "c",
-                "backup.h": "c"
+                "backup.h": "c",
+                "rtc.h": "c"
         }
 }
