--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,8 @@
                 "backup.h": "c",
                 "rtc.h": "c",
                 "regex.h": "c",
-                "debug_tasks.h": "c"
+                "debug_tasks.h": "c",
+                "board_config.h": "c",
+                "basic_math_functions.h": "c"
         }
 }
