Getting current changes to run on PAL + refactoring
- Update KX134 driver for I2C
- Refactor some names to be in terms of the library name first (e.g. init_sensors -> sensors_init)
- Implement pause button event

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ build_src_filter = -<*>
 build_flags = -Wall -Werror -Wno-format-truncation
 lib_deps = Nanopb
 custom_nanopb_protos = 
-    +<lib/storage/proto/sensor.proto>
-    +<lib/storage/proto/gps.proto>
-    +<lib/storage/proto/state.proto>
+	+<lib/storage/proto/sensor.proto>
+	+<lib/storage/proto/gps.proto>
+	+<lib/storage/proto/state.proto>
 
 [env:teensy41]
 platform = teensy
@@ -29,6 +29,7 @@ build_flags =
 	-Isrc/imxrt1062/MIMXRT1062
 	-Isrc/imxrt1062/CMSIS/Core/Include
 	-Isrc/imxrt1062/MIMXRT1062/drivers
+platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k31]
 platform = ststm32
@@ -38,23 +39,24 @@ build_src_filter = +<stm32g4> +<pal_9k31>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
-    pre:scripts/add_hardfloat.py
-    pre:scripts/auto_firmware_specifier.py
+	pre:scripts/add_hardfloat.py
+	pre:scripts/auto_firmware_specifier.py
 build_flags = 
 	${env.build_flags}
-    -march=armv7e-m
-    -mfloat-abi=hard
-    -mfpu=fpv4-sp-d16
+	-march=armv7e-m
+	-mfloat-abi=hard
+	-mfpu=fpv4-sp-d16
 	-Isrc/pal_9k31/USB_Device/Target
 	-Isrc/pal_9k31/littlefs
-    -Isrc/pal_9k31/FreeRTOS/Source/CMSIS_RTOS_V2
-    -Isrc/pal_9k31/FreeRTOS/Source/include
-    -Isrc/pal_9k31/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-Isrc/pal_9k31/FreeRTOS/Source/CMSIS_RTOS_V2
+	-Isrc/pal_9k31/FreeRTOS/Source/include
+	-Isrc/pal_9k31/FreeRTOS/Source/portable/GCC/ARM_CM4F
 	-D HSE_VALUE=48000000
 	-Wl,--undefined,_printf_float
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
+platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k4]
 platform = ststm32
@@ -64,48 +66,48 @@ build_src_filter = +<stm32h7> +<pal_9k4> -<pal_9k4/hwil>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
-    pre:scripts/add_hardfloat.py
-    pre:scripts/auto_firmware_specifier.py
+	pre:scripts/add_hardfloat.py
+	pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
-    -O1
-    -march=armv7e-m
-    -mfloat-abi=hard
-    -mfpu=fpv4-sp-d16
-    -Isrc/pal_9k4
-    -Isrc/pal_9k4/USB_Device/Class/CDC/Inc
-    -Isrc/pal_9k4/USB_Device/Class/MSC/Inc
-    -Isrc/pal_9k4/USB_Device/Class/CompositeBuilder/Inc
-    -Isrc/pal_9k4/USB_Device/Class/MTP/Inc
-    -Isrc/pal_9k4/USB_Device/Core/Inc
-    -Isrc/pal_9k4/littlefs
-    -Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
-    -Isrc/pal_9k4/FreeRTOS/Source/include
-    -Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
-    -I.pio/build/${PIOENV}/nanopb/generated-src
-    -I.pio/libdeps/${PIOENV}/Nanopb
-    -Isrc/pal_9k4/peripherals
-    -DHSE_VALUE=48000000
-    -DUSE_FULL_LL_DRIVER
-    -Wl,--undefined,_printf_float
-    -Lsrc/pal_9k4
-    # Platform specific ram sections
-    -DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
+	-O1
+	-march=armv7e-m
+	-mfloat-abi=hard
+	-mfpu=fpv4-sp-d16
+	-Isrc/pal_9k4
+	-Isrc/pal_9k4/USB_Device/Class/CDC/Inc
+	-Isrc/pal_9k4/USB_Device/Class/MSC/Inc
+	-Isrc/pal_9k4/USB_Device/Class/CompositeBuilder/Inc
+	-Isrc/pal_9k4/USB_Device/Class/MTP/Inc
+	-Isrc/pal_9k4/USB_Device/Core/Inc
+	-Isrc/pal_9k4/littlefs
+	-Isrc/pal_9k4/FreeRTOS/Source/CMSIS_RTOS_V2
+	-Isrc/pal_9k4/FreeRTOS/Source/include
+	-Isrc/pal_9k4/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-I.pio/build/${PIOENV}/nanopb/generated-src
+	-I.pio/libdeps/${PIOENV}/Nanopb
+	-Isrc/pal_9k4/peripherals
+	-DHSE_VALUE=48000000
+	-DUSE_FULL_LL_DRIVER
+	-Wl,--undefined,_printf_float
+	-Lsrc/pal_9k4
+	-DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
 lib_ignore = 
-    STM32_USB_Device_Library-CDC
-    STM32_USB_Device_Library-Core
-    STM32_USB_Device_Library-HID
-    STM32_USB_Device_Library-MSC
-    STM32_USB_Device_Library-DFU
-    STM32_USB_Device_Library-VIDEO
-    STM32_USB_Device_Library-AUDIO
-    STM32_USB_Device_Library-CDC_ECM
-    STM32_USB_Device_Library-CDC_RNDIS
-    STM32_USB_Device_Library-CustomHID
+	STM32_USB_Device_Library-CDC
+	STM32_USB_Device_Library-Core
+	STM32_USB_Device_Library-HID
+	STM32_USB_Device_Library-MSC
+	STM32_USB_Device_Library-DFU
+	STM32_USB_Device_Library-VIDEO
+	STM32_USB_Device_Library-AUDIO
+	STM32_USB_Device_Library-CDC_ECM
+	STM32_USB_Device_Library-CDC_RNDIS
+	STM32_USB_Device_Library-CustomHID
 board_build.ldscript = linkerscript.ld
 build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
+platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k5]
 platform = ststm32
@@ -115,45 +117,52 @@ build_src_filter = +<stm32h7> +<pal_9k5> -<pal_9k5/hwil>
 test_framework = unity
 test_filter = stm32cube/*
 extra_scripts = 
-    pre:scripts/add_hardfloat.py
-    pre:scripts/auto_firmware_specifier.py
+	pre:scripts/add_hardfloat.py
+	pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
-    -O1
-    -march=armv7e-m
-    -mfloat-abi=hard
-    -mfpu=fpv4-sp-d16
-    -Isrc/pal_9k5
-    -Isrc/pal_9k5/TinyUSB/src
-    -Isrc/pal_9k5/FreeRTOS/Source/CMSIS_RTOS_V2
-    -Isrc/pal_9k5/FreeRTOS/Source/include
-    -Isrc/pal_9k5/FreeRTOS/Source/portable/GCC/ARM_CM4F
-    -I.pio/build/${PIOENV}/nanopb/generated-src
-    -I.pio/libdeps/${PIOENV}/Nanopb
-    -Isrc/pal_9k5/peripherals
-    -DHSE_VALUE=48000000
-    -DUSE_FULL_LL_DRIVER
-    -DCFG_TUSB_MCU=OPT_MCU_STM32H7
-    -Wl,--undefined,_printf_float
-    -Lsrc/pal_9k5
-    # Platform specific ram sections
-    -DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
+	-O1
+	-march=armv7e-m
+	-mfloat-abi=hard
+	-mfpu=fpv4-sp-d16
+	-Isrc/pal_9k5
+	-Isrc/pal_9k5/TinyUSB/src
+	-Isrc/pal_9k5/FreeRTOS/Source/CMSIS_RTOS_V2
+	-Isrc/pal_9k5/FreeRTOS/Source/include
+	-Isrc/pal_9k5/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-I.pio/build/${PIOENV}/nanopb/generated-src
+	-I.pio/libdeps/${PIOENV}/Nanopb
+	-Isrc/pal_9k5/peripherals
+	-DHSE_VALUE=48000000
+	-DUSE_FULL_LL_DRIVER
+	-DCFG_TUSB_MCU=OPT_MCU_STM32H7
+	-Wl,--undefined,_printf_float
+	-Wl,--undefined=uxTopUsedPriority
+	-Lsrc/pal_9k5
+	-DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
 board_build.ldscript = linkerscript.ld
 build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
+#debug_server = 
+#	${platformio.packages_dir}/tool-openocd/bin/openocd
+#	-f
+#	openocd.cfg
+platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k4_hwil]
 extends = env:pal_9k4
 build_flags = ${env:pal_9k4.build_flags}
-    -DHWIL_TEST
+	-DHWIL_TEST
 build_src_filter = ${env:pal_9k4.build_src_filter}
-    +<pal_9k4/hwil>
+	+<pal_9k4/hwil>
 extra_scripts = ${env:pal_9k4.extra_scripts}
-    pre:scripts/generate_hwil_data_file.py
+	pre:scripts/generate_hwil_data_file.py
 hwil_data_dir = data/pal-fsl-test
+platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
 platform = native
 test_framework = googletest
 test_filter = native/*
+platform_packages = platformio/tool-openocd@^3.1200.0
