--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,8 @@
                 "regex.h": "c",
                 "debug_tasks.h": "c",
                 "board_config.h": "c",
-                "basic_math_functions.h": "c"
+                "basic_math_functions.h": "c",
+                "buzzer.h": "c",
+                "sensors.h": "c"
         }
 }
