--- a/platformio.ini
+++ b/platformio.ini
@@ -150,6 +150,17 @@ debug_build_flags = -g -O0
 #	openocd.cfg
 platform_packages = platformio/tool-openocd@^3.1200.0
 
+[env:pal_9k5_hwil]
+extends = env:pal_9k5
+build_flags = ${env:pal_9k5.build_flags}
+	-DHWIL_TEST
+build_src_filter = ${env:pal_9k5.build_src_filter}
+	+<pal_9k5/hwil>
+extra_scripts = ${env:pal_9k5.extra_scripts}
+	pre:scripts/generate_hwil_data_file.py
+hwil_data_dir = data/pal-fsl-test
+platform_packages = platformio/tool-openocd@^3.1200.0
+
 [env:pal_9k4_hwil]
 extends = env:pal_9k4
 build_flags = ${env:pal_9k4.build_flags}
