More control logic/state estimation changes
- Add registering of ground baro altitude during init
- Actually send pyro fire commands as required
- Fix launch detection logic bug
- Factor out baro averaging buffer into separate lib
- Various small state estimation bug fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ extra_scripts =
 	pre:scripts/add_hardfloat.py
 	pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
-	-O1
+	-O2
 	-march=armv7e-m
 	-mfloat-abi=hard
 	-mfpu=fpv4-sp-d16
@@ -66,7 +66,7 @@ build_src_filter = ${env:pal_9k5.build_src_filter}
 	+<pal_9k5/hwil>
 extra_scripts = ${env:pal_9k5.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
-hwil_data_dir = data/pal-fsl-test
+hwil_data_dir = data/skyshot-iri
 platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
