Disable timestamp counters during debug

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,7 +56,7 @@ debug_server =
 	${platformio.packages_dir}/tool-openocd/bin/openocd
 	-f
 	openocd.cfg
-platform_packages = platformio/tool-openocd@^3.1200.0
+# platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k5_hwil]
 extends = env:pal_9k5
@@ -67,10 +67,10 @@ build_src_filter = ${env:pal_9k5.build_src_filter}
 extra_scripts = ${env:pal_9k5.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
 hwil_data_dir = data/skyshot-iri
-platform_packages = platformio/tool-openocd@^3.1200.0
+# platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
 platform = native
 test_framework = googletest
 test_filter = native/*
-platform_packages = platformio/tool-openocd@^3.1200.0
+# platform_packages = platformio/tool-openocd@^3.1200.0
