Remove color tags from stored log, get rid of null byte in header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,7 @@
                 "board_config.h": "c",
                 "basic_math_functions.h": "c",
                 "buzzer.h": "c",
-                "sensors.h": "c"
+                "sensors.h": "c",
+                "io.h": "c"
         }
 }
