openocd still more trouble than it's worth

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,10 +52,10 @@ build_unflags = -Os
 upload_protocol = dfu
 debug_tool = stlink
 debug_build_flags = -g -O0
-debug_server = 
-	${platformio.packages_dir}/tool-openocd/bin/openocd
-	-f
-	openocd.cfg
+# debug_server = 
+# 	${platformio.packages_dir}/tool-openocd/bin/openocd
+# 	-f
+# 	openocd.cfg
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k5_hwil]
