Set config options using the serial terminal

--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ build_flags = ${env.build_flags}
 	-DUSE_FULL_LL_DRIVER
 	-DCFG_TUSB_MCU=OPT_MCU_STM32H7
 	-Wl,--undefined,_printf_float
+	-Wl,--undefined,_scanf_float
 	-Wl,--undefined=uxTopUsedPriority
 	-Lsrc/pal_9k5
 	-DRAM_D2=__attribute__((section(\".ram_d2_sec\")))
