Add basic SWIL setup

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ stm32wle5/Debug
 # Logs
 logs
 
+# SWIL outputs
+sim_out
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
