--- a/platformio.ini
+++ b/platformio.ini
@@ -70,6 +70,18 @@ extra_scripts = ${env:pal_9k5.extra_scripts}
 hwil_data_dir = data/skyshot-iri
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
+[env:pal_9k5_swil]
+platform = native
+build_src_filter = +<swil>
+extra_scripts =  pre:scripts/generate_hwil_data_file.py
+build_flags =
+	-O2
+	-I.pio/build/${PIOENV}/nanopb/generated-src
+	-I.pio/libdeps/${PIOENV}/Nanopb
+	-DHWIL_TEST
+hwil_data_dir = data/skyshot-iri
+# platform_packages = platformio/tool-openocd@^3.1200.0
+
 [env:native]
 platform = native
 test_framework = googletest
