Minor improvements to SWIL

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 build_src_filter = -<*>
-build_flags = -Wall -Werror -Wno-format-truncation
+build_flags = -Wall -Werror -Wno-format
 lib_deps = Nanopb
 custom_nanopb_protos = 
 	+<lib/storage/proto/sensor.proto>
@@ -74,11 +74,12 @@ hwil_data_dir = data/skyshot-iri
 platform = native
 build_src_filter = +<swil>
 extra_scripts =  pre:scripts/generate_hwil_data_file.py
-build_flags =
+build_flags = ${env.build_flags}
 	-O2
 	-I.pio/build/${PIOENV}/nanopb/generated-src
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
+debug_build_flags = -g -O0
 hwil_data_dir = data/skyshot-iri
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
